<resources>
    <string name="app_name">Nature</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notification_test">NotificationTestActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="info_main">Nature</string>
    <string name="info_conference">会议</string>
    <string name="info_tree_hole">树洞</string>
    <string name="info_message">消息</string>
    <string name="info_company_news">公司动态</string>
    <string name="info_industry_news">行业动态</string>
    <string name="info_conference_info">会议信息</string>
    <string name="info_conference_material">会议资料</string>
    <string name="info_conference_entrance">进入会议</string>
    <string name="info_conference_address">地点：</string>
    <string name="info_leave">请假</string>
    <string name="info_current_conference_speaker">当前发言人:</string>
    <string name="info_conference_finish">会议结束！</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_application_meeting">ApplicationMeetingActivity</string>
    <string name="title_activity_main_drawer3">MainDrawer3Activity</string>


</resources>
