<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.bigkoo.convenientbanner.ConvenientBanner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="56dp" />

    <RelativeLayout
        android:id="@+id/rl_function"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/banner"
        android:layout_weight="3">


        <LinearLayout
            android:id="@+id/ll_nav_bar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:paddingTop="5dp">

            <RadioGroup
                android:id="@+id/rg_nav_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    style="@style/rb_nav_bar"
                    android:drawableTop="@drawable/ic_main_choose"
                    android:text="@string/info_main" />

                <RadioButton
                    style="@style/rb_nav_bar"
                    android:drawableTop="@drawable/ic_conference_not_choose"
                    android:text="@string/info_conference" />

                <RadioButton
                    style="@style/rb_nav_bar"
                    android:drawableTop="@drawable/ic_tree_hole_not_choose"
                    android:text="@string/info_tree_hole" />

                <RadioButton
                    style="@style/rb_nav_bar"
                    android:drawableTop="@drawable/ic_message_not_choose"
                    android:text="@string/info_message" />
            </RadioGroup>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            style="@style/line_divider"
            android:layout_above="@+id/ll_nav_bar" />

        <com.cn.balala.nature.nature.view.NoScrollGridView
            android:id="@+id/gv_tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/divider"
            android:background="@color/divider"
            android:horizontalSpacing="0.5dp"
            android:numColumns="3"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0.5dp" />

    </RelativeLayout>

</LinearLayout>

